Move code to the org package Fix javadoc Add sonatype required fields to pom